--- a/R/p11_GAP_Bootstrap_07_02_2017.Rmd
+++ b/R/p11_GAP_Bootstrap_07_02_2017.Rmd
@@ -27,7 +27,9 @@ library(caret)
 library(reshape)
 library(tableone)
 library(stargazer)
-library(mice)
+library(RANN)
+
+
 ```
 
 #Functions
@@ -160,14 +162,14 @@ design = model.matrix(~fa_Gender+fa_Ethnicity)
 imputedesign = model.matrix(~fa_ICD_DSM+fa_Ethnicity)  #imputation factors
 
 #create dataframe for input into impute
-PRS_full_impute<-cbind(GX_DF_adj[,c("Phenotype","Ethnicity","ICD_DSM","PRS_0.1","sampleID")],imputedesign[,2:6])
+PRS_full_impute<-cbind(GX_DF_adj[,c("Phenotype","Ethnicity","ICD_DSM","PRS_0.1_adj","sampleID")],imputedesign[,2:6])
 
 #Impute with KNN using preprocess.
 set.seed(seed)
 ImputePCA<-preProcess(PRS_full_impute,method= c("knnImpute"))
 
 #Get NAs
-PRS_NAs<-PRS_full_impute[is.na(PRS_full_impute$PRS_0.1),]
+PRS_NAs<-PRS_full_impute[is.na(PRS_full_impute$PRS_0.1_adj),]
 
 #Predict 
 resultspred<-cbind(predict(ImputePCA, PRS_full_impute)[4],PRS_full_impute[c(1:3,5)])
@@ -176,7 +178,7 @@ resultspred<-cbind(predict(ImputePCA, PRS_full_impute)[4],PRS_full_impute[c(1:3,
 all.equal(GX_DF_adj$sampleID[c(2:280,1)],resultspred$sampleID[c(2:280,1)])
 
 #Prs back in original DF
-GX_DF_adj$PRS_0.1<-resultspred$PRS_0.1
+GX_DF_adj$PRS_0.1<-resultspred$PRS_0.1_adj
 
 resultsNA<-resultspred[resultspred$sampleID%in%PRS_NAs$sampleID,]
 resultspred$Imputed<-ifelse(resultspred$sampleID%in%PRS_NAs$sampleID,"Imputed", "Real")
@@ -185,13 +187,12 @@ resultspred$Imputed<-ifelse(resultspred$sampleID%in%PRS_NAs$sampleID,"Imputed", 
 #imputed  vs PRS
 title = "PRS_imputed_vs_real"
 ggplot(data = resultspred, 
-       aes(x = ICD_DSM, y=PRS_0.1  , colour = Imputed)) +
+       aes(x = ICD_DSM, y=PRS_0.1_adj  , colour = Imputed)) +
   geom_jitter() +
   geom_boxplot()+
   facet_wrap(~ Ethnicity)+
   ggtitle(title)
 ggsave(paste(figs_dir,project_id,project_name,title,".png",sep=""))
-
 
 ```
 
@@ -199,14 +200,15 @@ ggsave(paste(figs_dir,project_id,project_name,title,".png",sep=""))
 ####Define all 8 models with predictors 
 ```{r Create input dataframes for models}
 #Define all 8 models with predictors 
-Gx <-GX_DF_adj[,-c(1:3,5:27)]
+N_index_probe<-37
+Gx <-GX_DF_adj[,-c(1:3,5:N_index_probe)]
 Gx_Scz<-Gx[,c("Phenotype",names(GX_DF_adj)[names(GX_DF_adj)%in%Genesets_HD$Gene_names])]
 PRS<-GX_DF_adj[,c(4,24)]  
 Demographics<-cbind(GX_DF_adj[,c(4,6)],design[,2:5])
 PRS_Demo<-cbind(GX_DF_adj[,c(4,6,24)],design[,2:5])
-Gx_PRS <- cbind(PRS,GX_DF_adj[,-c(1:27)])
-Gx_Demo <- cbind(Demographics,GX_DF_adj[,-c(1:27)])
-Gx_Demo_PRS <- cbind(PRS_Demo,GX_DF_adj[,-c(1:27)])
+Gx_PRS <- cbind(PRS,GX_DF_adj[,-c(1:N_index_probe)])
+Gx_Demo <- cbind(Demographics,GX_DF_adj[,-c(1:N_index_probe)])
+Gx_Demo_PRS <- cbind(PRS_Demo,GX_DF_adj[,-c(1:N_index_probe)])
 
 #list of all model predictors
 predictorlists<-list(Gx,Gx_Scz,PRS,Demographics,PRS_Demo,Gx_PRS,Gx_Demo,Gx_Demo_PRS)
@@ -451,7 +453,9 @@ table_dem_fun<-function(pdata,table_name,stratify,listVars,catVars){
 #project name defined
 project_name = "glmnet_missclass"
 #Gene expression data to use. 
-GX_data<-GX_DF_adj[1:27]
+#GX_data<-GX_DF_adj[1:27]
+GX_data<-GX_DF_adj[1:N_index_probe]
+
 
 #Function to get dataframes
 output_dfs<-data_get_fun(glmnet_models,modelID)
@@ -477,18 +481,21 @@ for (df_Num in 1:length(output_dfs)){
 write.csv(PhenoMC_Data, file=paste(output_dir,project_id,project_name,"_Sample_Percent_accuracy.csv",sep=""),row.names=F,quote=FALSE)
 PhenoMC_Data<-read.csv(paste(output_dir,project_id,project_name,"_Sample_Percent_accuracy.csv",sep=""))
 
-str(PhenoMC_Data)
 
 ```
 
 #################### Output & Characterisation for best model
 ```{r output results for missclassification}
 
+#Define col indexes for percentage correct classification in glmnet
+names(PhenoMC_Data)
+col_index_percentages<-c(38:45)
+
 ######################Density plots
 #######All models
-metric_plot2<-melt(PhenoMC_Data, id=c(names(PhenoMC_Data[,-c(28:35)])))
+metric_plot2<-melt(PhenoMC_Data, id=c(names(PhenoMC_Data[,-col_index_percentages])))
 #Change colnames
-colnames(metric_plot2)<-c(names(PhenoMC_Data[,-c(28:35)]),"Model","Percentage")
+colnames(metric_plot2)<-c(names(PhenoMC_Data[,-col_index_percentages]),"Model","Percentage")
 #Control vs FEP
 title = "Density Plots Stratified by Control and FEP"
 ggplot(metric_plot2, aes(Percentage, colour = Phenotype)) +
@@ -540,9 +547,10 @@ plot_fun_gx <-function(inputd,xax,yax,col,pfacets,ptitle) {
     ggtitle(ptitle)  
 }
 
-PhenoMC_Data$Acc_6_Gx_PRS
+PhenoMC_Data$Acc_3_PRS
 plot_fun_gx(PhenoMC_Data,"ICD_DSM","Acc_1_Gx","ICD_DSM","Ethnicity","Titleofplot")
-plot_fun_gx(PhenoMC_Data,"ICD_DSM","Acc_6_Gx_PRS","ICD_DSM","Ethnicity","Titleofplot")
+plot_fun_gx(PhenoMC_Data,"ICD_DSM","Acc_3_PRS","ICD_DSM","Ethnicity","Titleofplot")
+plot_fun_gx(PhenoMC_Data,"ICD_DSM","Acc_4_Demographics","ICD_DSM","Ethnicity","Titleofplot")
 
 #2. Gender
 plot_fun_gx(PhenoMC_Data,"ICD_DSM","Acc_1_Gx","ICD_DSM","Gender","Titleofplot")
@@ -572,7 +580,6 @@ quantile(PhenoMC_Data$Acc_1_Gx,probs = c(0, 20, 40, 60, 80,100)/100)
 #5. Age 
 plot_fun_gx(PhenoMC_Data,"Cuts","Age","Cuts","ICD_DSM","Titleofplot")
 plot_fun_gx(PhenoMC_Data,"ICD_DSM","Age","ICD_DSM","Cuts","Titleofplot")
-ggplot(PhenoMC_Data, aes(Acc_1_Gx, colour = ICD_DSM)) +
 ggplot(PhenoMC_Data, aes(x=Cuts,y=Age, colour = ICD_DSM)) +
   geom_jitter() +  
   geom_boxplot(notch=F)+
@@ -745,7 +752,8 @@ pansNAremovedNAPRS2<-filter(pansNAremovedNAPRS,ICD_DSM =="Schizophrenia")
 pansNAremovedNAPRS2<-filter(pansNAremovedNAPRS, Ethnicity =="White")
 cor(pansNAremovedNAPRS2$,pansNAremovedNAPRS2$PanssScore)
 
-cor(pansNAremovedNAPRS2$PanssScore,pansNAremovedNAPRS2[,c(18:27)])
+names(pansNAremovedNAPRS2)
+cor(pansNAremovedNAPRS2$PanssScore,pansNAremovedNAPRS2[,c(18:37)])
 dim(pansNAremovedNAPRS2)
 
 (PhenoMC_Data$PanssScore)
